--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 
    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
@@ -1383,3 +1384,4 @@
         <p aria-live="assertive" role="alert" style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; overflow-wrap: normal;clip:rect(0px, 0px, 0px, 0px);height:1px;margin:-1px;overflow:hidden;padding:0px;position:absolute;width: 1px;white-space:nowrap;overflow-wrap:normal;"></p>
     </next-route-announcer>
 </body>
+</html>
